tests/fixtures/invalid/range_index_name_as_type.gcl
// Error: a range index name is not a value type.
index Step = linspace(0.0 s, 1.0 s, step: 1.0 s);

node x: Step = 0.0 s;
